Added Privacy Note to ACRA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,7 +203,8 @@ along with this program.  If not, see https://www.gnu.org/licenses/.]]></string>
     <string name="acra_dialog_text">Tut mir leid! Das hätte nicht passieren sollen. Die App ist abgestürzt.
     \nBitte sende mir den Fehlerbericht, damit ich den Fehler so schnell wie möglich beheben kann.
     \nVielen Dank!</string>
-    <string name="acra_dialog_content">Bitte füge hier einen Kommentar über das ein was du gemacht hast:</string>
+    <string name="acra_dialog_content">Bitte füge hier einen Kommentar über das ein was du gemacht hast:
+        \nBeim Klick auf OK öffnet sich die E-Mail-App und es werden persönliche Daten (wie Mail-Adresse, Gerätemodell, gespeicherte Werte, etc.) übermittelt!</string>
     <string name="acra_dialog_title">Das hätte nicht passieren sollen</string>
     <string name="acra_toast">Das hätte nicht passieren sollen.</string>
 
