--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,7 +159,13 @@
     <string name="privacy"><![CDATA[<h1>Datenschutzerklärung</h1>\nDie offizielle Gymnasium Wendelstein App (im folgenden GymWen App genannt) sammelt keine Daten über ihre Nutzer.\n
         D.h. es werden weder personenenbezogene Daten noch gerätspezifische Daten gesammelt oder an Dritte weitergegeben.\n
         Ihre eingegebenen Daten werden ausschließlich lokal auf Ihrem Gerät gespeichert und von dort abgerufen.\n
-        Außerdem werden ausschließlich schon bereits genutzte Datenbanken der Schule verwendet.]]></string>
+        Außerdem werden ausschließlich schon bereits genutzte Datenbanken der Schule verwendet.
+        \nBei Absturzberichten muss jedoch beachtet werden, dass mir diverse Informationen übermittelt werden:
+        \n - Version der App
+        \n - Datum und Uhrzeit des Absturzes
+        \n - Geräteinformationen wie Modell, Hersteller usw. (keine Seriennummer / IMEI)
+        \n - Betriebssystem-Version
+        \n - Stack-Trace zu dem Absturz]]></string>
     <string name="license"><![CDATA[<h1>Lizenz</h1>\n
     Copyright © 2019 Felix Hollederer\n
 This program is free software: you can redistribute it and/or modify
