--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="menu_category_other">Diverse Apps</string>
     <string name="menu_category_school">Gymnasium</string>
     <string name="menu_category_settings">Einstellungen</string>
+    <string name="menu_category_vertretung">Vertretungsplan</string>
     <string name="menu_both">Auf einen Blick!</string>
     <string name="menu_impressum">Impressum</string>
     <string name="menu_update">Updates</string>
