Integrated in MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="courses">Kurs</string>
     <string name="hours">Stunde</string>
     <string name="hours_short">h</string>
+    <string name="hours_short_three">Std</string>
     <string name="subject">Fach</string>
     <string name="teacher">Lehrer</string>
     <string name="teacher_short">L</string>
