--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Navigation öffnen</string>
     <string name="navigation_drawer_close">Navigation schließen</string>
-    <string name="menu_today">Heute</string>
-    <string name="menu_tomorrow">Morgen</string>
+    <string name="today">Heute</string>
+    <string name="tomorrow">Morgen</string>
     <string name="menu_settings">Einstellungen</string>
     <string name="menu_website">Startseite</string>
     <string name="menu_mebis">Mebis</string>
@@ -56,6 +56,7 @@
     <string name="set_old_vertretung">Altes Design</string>
     <string name="set_design_title">Design</string>
     <string name="set_design_show_sections">Gefiltert \u0026 Gesamt einzeln anzeigen</string>
+    <string name="set_show_weekdates">Wochentage immer anzeigen</string>
 
     <!-- Vertretungsplan -->
     <string name="nothing">Es entfällt nichts für dich.</string>
