--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <!-- German -->
     <string name="app_name" translatable="false">GymWen</string>
     <string name="title" translatable="false">Gymnasium Wendelstein</string>
-    <string name="subtitle">Offizielle App\n© Felix Hollederer</string>
+    <string name="subtitle">Offizielle App © Felix Hollederer</string>
 
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Navigation öffnen</string>
