--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="set_design_show_sections">Gefiltert \u0026 Gesamt einzeln anzeigen</string>
     <string name="set_show_weekdates">Wochentage immer anzeigen</string>
     <string name="set_parents">Elternmodus</string>
+    <string name="set_two_notifications">Tage einzeln als Benachrichtigung</string>
 
     <!-- Vertretungsplan -->
     <string name="nothing">Es entfällt nichts für dich.</string>
