--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -289,9 +289,12 @@ along with this program.  If not, see https://www.gnu.org/licenses/.]]></string>
     <string name="add">Hinzufügen</string>
     <string name="profiles_add">Profile hinzufügen\u2026</string>
     <string name="profile_empty_name">NeuesProfil</string>
+    <string name="profile_default_name">Standard</string>
 
     <!-- Grades Management -->
     <string name="grades_no_app">Keine Excel App installiert!</string>
+    <string name="grades_down_title">Lädt Tabelle herunger\u2026</string>
+    <string name="grades_management">Notenverwaltung</string>
 
     <!-- ColoRush -->
     <string name="colorush_description">In diesem Spiel müsst ihr eine Kugel mit der passenden Farbe einfärben um über Barrieren im Boden zu gelangen.\nEs gibt fünf verschiedene Spielmodi, in drei davon wählst du die Farbe der Kugel durch drei Knöpfe aus (Rot, Gelb, Blau).\nIn den restlichen ist sie vorgegeben und du musst mit Hilfe von Knöpfen den falschen Barrieren ausweichen.\nIm Forgeschrittenen-Modus gibt es die Möglichkeit die einzelnen Farb-Knöpfe gleichzeitig zu drücken und so neue Farben , wie Grün oder Orange, zu kreieren.\nAußerdem gibt es die Möglichkeit Diamanten einzusammeln und sich davon neue Skins oder Hintergründe zu kaufen.\nDes Weiteren gibt es einen Multiplayermodus und ein tägliches Level.\nViel Spaß!</string>
